--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,10 @@
     "jquery": "^3.0.0",
     "normalize-css": "^4.1.1",
     "firebase": "^3.0.5",
-    "jquery.transit": "^0.9.12"
+    "jquery.transit": "^0.9.12",
+    "static-player": "^0.0.6"
+  },
+  "resolutions": {
+    "jquery": "^3.0.0"
   }
 }
